# proman-versioning

./: .bumpversion.cfg  CHANGELOG.md  CODEOWNERS  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  darwin-quality-assurance.yml  darwin-quality-assurance.yml.bak  documentation.yml  linux-quality-assurance.yml  windows-quality-assurance.yml  windows-quality-assurance.yml.bak
docs/: conventional_commits.md  design.md
integration/: .version  .versioning  pyproject.toml  test_config.py
integration/.gittest/: COMMIT_EDITMSG  index
integration/.gittest/info/: exclude
integration/.gittest/logs/: HEAD
integration/.gittest/logs/refs/heads/: master
integration/.gittest/refs/heads/: master
integration/pyproject/: .versioning  pyproject.toml  test_config.py
integration/pyproject/.gittest/: COMMIT_EDITMSG  index
integration/pyproject/.gittest/info/: exclude
integration/pyproject/.gittest/logs/refs/heads/: master
integration/pyproject/.gittest/refs/heads/: master
proman_releases/: __init__.py  __main__.py  config.py  controller.py  vcs.py  version.py
proman_releases/cli/: release.py  version.py
proman_releases/grammars/: conventional_commits.py
proman_versioning/: __init__.py  __main__.py  cli.py  config.py  controller.py  vcs.py  version.py
proman_versioning/cli/: __init__.py  release.py  version.py
proman_versioning/grammars/: conventional_commits.lark  conventional_commits.py
proman_versions/: __init__.py  __main__.py  config.py  controller.py  vcs.py  version.py
proman_versions/cli/: release.py
proman_versions/grammars/: conventional_commits.py
src/proman/versioning/: __init__.py  __main__.py  changelog.py  cli.py  config.py  controller.py  vcs.py
src/proman/versioning/grammars/: conventional_commits.py
src/proman/versioning/templates/: pypr_hooks.j2
src/versioning/: __init__.py  __main__.py  changelog.py  cli.py  config.py  controller.py  exception.py  interactive.py  vcs.py  version.py
src/versioning/grammars/: __init__.py  conventional_commits.lark  conventional_commits.py
src/versioning/templates/: gitmessage.j2  invoke_hooks.j2  pypr_hooks.j2
tasks/: __init__.py  build.py  doc.py  qa.py
tests/: test_config.py  test_controller.py  test_version.py  test_versioning.py
tests/grammars/: test_body.py  test_footer.py  test_title.py
tests/version/: test_python_version.py
