[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "proman-versioning"
version = "0.6.1a0"
description = "Project Management Versioning Tool."
authors = [
    {name="Jesse P. Johnson", email="jpj6652@gmail.com"}
]
maintainers = [
    {name="Jesse P. Johnson", email="jpj6652@gmail.com"}
]
license = {file = "LICENSE.md"}
readme = "README.md"
requires-python = ">=3.6.2"
keywords = ["configuration management"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Typing :: Typed",
]

dependencies = [
    "lark-parser>=0.10.0",
    "argufy>=0.1.1-alpha.12",
    "transitions>=0.8.4",
    "pygit2>=1.6.1",
    "cffi>=1.15.0",
    "packaging>=21.3",
    "compendium>=0.1.1-beta.0",
]

[project.optional-dependencies]
# development
tools = [
    "invoke>=1.4.1",
    "tox>=3.25.0",
    "proman-workflows>=0.1.0-alpha.8",
]
build = [
    "setuptools-pep660",
    "build>=0.7.0",
    "proman-versioning>=0.5.0-alpha.2"
]
test = [
    "pytest>=6",
    "pyfakefs>=4.5.6",
    "pytest-cov>=2.10.0"
]
sca = [
    "mypy>=0.942",
    "bandit>=1.6.2",
    "safety>=1.9.0"
    # "pylint>=2.9.5"
]
style = [
    "black==22.3.0",
    "isort>=5.10.1",
    "flake8>=3.8.3"
]

# documentation
docs-build = [
    "mkdocs>=1.2.2",
    "mkdocs-material>=7.2.0",
    "mkdocstrings>=0.15.2",
    "pydocstyle>=6.1.1"
]
docs-style = [
    "pydocstyle[toml]>=6.1.1"
]
docs-sca = [
    "docstr-coverage>=1.2.0"
]
changelog = ["mdutils"]

[project.urls]
homepage = "https://github.com/python-proman/proman-versioning"

[project.scripts]
version = "versioning.__main__:main"

[tool.proman.versioning]
enable_devreleases = false

[[tool.proman.versioning.files]]
filepath = "src/versioning/__init__.py"
pattern = "__version__ = '${version}'"

[[tool.proman.versioning.files]]
filepath = "tests/test_version.py"
pattern = "__version__ == '${version}'"

[[tool.proman.versioning.files]]
filepath = "pyproject.toml"
pattern = "version = \"${version}\""

[tool.pydocstyle]
ignore = [
    "D203",
    "D213",
]

[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line-length = 79
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''

(
  /(
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vagrant
    | _build
    | dist
  )
)
'''

[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
